@@ -99,6 +99,10 @@ void ast_rtp_proto_unregister(struct ast_rtp_protocol *proto);
 
 void ast_rtp_stop(struct ast_rtp *rtp);
 
+void ast_rtp_init(void);
+
+void ast_rtp_reload(void);
+
 #if defined(__cplusplus) || defined(c_plusplus)
 }
 #endif
